--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
-{% block title %}{% endblock %}
+
+{% block title %}Logowanie{% endblock %}
 
 {% block content %}
-    <h1>logowanie</h1>
-    <p>wypelnij formulaz</p>
+	<h1>Logowanie</h1>
+    <p>Wypełnij poniższy formularz, aby się zalogować:</p>
     <form action="#" method="post">
-        {{ form.as_p }}
+        {{ form.as_p}}
         {% csrf_token %}
-        <p><input type="submit" value="zaloguj"> </p>
+        <p><input type="submit" value="Zaloguj"></p>
     </form>
 {% endblock %}
