--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -5,38 +5,55 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
+
 </head>
 <body>
 <header id="header">
-    <span class="logo">Booksmarks</span>
-    {% if request.user.is_authicate %}
+    <span class="logo">Bookmarks</span>
+    {% if request.user.is_authenticated %}
         <ul class="menu">
-            <li {% if section == "dashboard" %} class="selected" {% endif %}>
-                 <a href="{% url "dashboard" %}">str gluwna</a>
-            </li>
-            <li {% if section == "images" %} class="selected" {% endif %}>
-                <a href="{% url "images" %}">Zdjencia</a>
-            </li>
-            <li {% if section == "pople" %} class="selected" {% endif %}>
-                <a href="{% url "pople" %}">Ludzie</a>
-            </li>
+        <li {% if section == "dashboard" %}class="selected"{% endif %}>
+            <a href="{% url "dashboard" %}">Strona główna</a>
+        </li>
+        <li {% if section == "images" %}class="selected"{% endif %}>
+            <a href="#">Zdjęcia</a>
+        </li>
+        <li {% if section == "people" %}class="selected"{% endif %}>
+            <a href="#">Ludzie</a>
+        </li>
         </ul>
-{% endif %}
+    {% endif %}
+
     <span class="user">
         {% if user.is_authenticated %}
-        Czesc, {{ request.user.first_name|default:request.user.username }},
+        Cześć, {{ request.user.first_name|default:request.user.username }},
         <form action="{% url "logout" %}" method="post">
             <button type="submit">Wyloguj</button>
             {% csrf_token %}
         </form>
         {% else %}
-            <a href="{% url 'login' %}"></a>
+        <a href="{% url "login" %}">Zaloguj się</a>
+
         {% endif %}
     </span>
 </header>
+
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li class="{{ message.tags }}">
+    {{ message|safe}}
+    <a href="." class="close">x</a>
+    </li>
+    {% endfor %}
+</ul>
+
+{% endif %}
+
 <main id="content">
     {% block content %}
     {% endblock %}
 </main>
+
 </body>
 </html>
