--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -1,12 +1,12 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block title %}
-    Wylogowanie
+	Wylogowanie
 {% endblock %}
+
 {% block content %}
-    <h1>wylogowanie</h1>
-   <p>wylogowano
-    mozesz<a href="{% url "login" %}">zalogowac ponownie</a></p>
-
-
+	<h1>Wylogowanie</h1>
+    <p>Zostałeś pomyślenie wylogowany.
+        Możesz <a href="{% url "login" %}">zalogować się ponownie</a>
+    </p>
 {% endblock %}
