--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,22 +1,25 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block title %}
-    Logowanie
+	Logowanie
 {% endblock %}
+
 {% block content %}
-    <h1>logowanie</h1>
+    <h1>Logowanie</h1>
+
     {% if form.errors %}
-        <p> cos zle wpisane </p>
+        <p>Nazwa użytkownika lub hasło są nieprawidłowe. Spróbuj ponownie</p>
         {% else %}
-        <p>wypelnij</p>
+        <p>Wypełnij poniższy formlarz, aby się zalogować</p>
     {% endif %}
+
     <div class="login-form">
-        <form action="{% url 'login' %}" method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <input type="hidden" name="next" value="{{ next }}">
-            <p><input type="submit" value="Zaloguj"></p>
-        </form>
+    <form action="{% url 'login' %}" method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next }}">
+        <p><input type="submit" value="Zaloguj"></p>
+    </form>
     </div>
 
 {% endblock %}
